fix: logback init
Signed-off-by: Sam Gammon <sam@elide.ventures>